<resources>
    <string name="app_name">WeatherApp</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weather_title_hint">Enter the city name</string>
    <string name="location_name_label">City</string>
    <string name="location_time_label">Time</string>
    <string name="location_dialog_title">Choose a location:</string>
    <string name="new_location">New Location</string>
    <string name="suggest_location">Insert the location name</string>
    <string name="delete_location">Delete</string>
    <string name="location_already_exists">The location already exists</string>
    <string name="location_added">New location added</string>
    <string name="description">Description:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="min_temp">Minimum temp:</string>
    <string name="max_temp">Maximum temp:</string>
    <string name="loading">Loading...</string>
    <string name="alarm_time">Alarm</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="alarm_text">Choose the notification time:</string>
    <string name="about_text">Created by Marc Paricio.\n The purpose of this app is to learn Android
        and some frameworks/architectures involved in it.</string>
    <string name="notification_hour">com.paricio.weatherapp.DialogFragment.AlarmDialogFragment.Hour</string>
    <string name="notification_minute">com.paricio.weatherapp.DialogFragment.AlarmDialogFragment.Minute</string>
    <string name="notification_file_key">com.paricio.weatherapp.notification</string>
    <string name="alarm_disable">Disable</string>
    <string name="action_check">Notify weather:</string>
    <string name="checked_location">com.paricio.weatherapp.CheckedLocation</string>

    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_na">&#xf07b;</string>

</resources>
