<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/alarm_disable"
            android:contentDescription="@string/alarm_disable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_delete"/>
    </LinearLayout>

    <TimePicker
        android:id="@+id/alarm_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:headerBackground="@color/colorPrimary"
        android:numbersBackgroundColor="@color/light_green"
        android:numbersSelectorColor="@color/light_blue"
        android:numbersTextColor="@color/black"
        android:timePickerMode="clock">

    </TimePicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/alarm_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            style="@style/BlueButtonStyle"/>
        <Button
            android:id="@+id/alarm_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ok"
            style="@style/BlueButtonStyle"/>
    </LinearLayout>

</LinearLayout>